<resources>
    <string name="app_name">RedWolf Recovery Project</string>
    <string name="device_name">Device</string>
    <string name="device_ram">Memory (RAM)</string>
    <string name="device_support">Support Status</string>
    <string name="device_support_true">Official</string>
    <string name="device_support_false">Not Supported</string>
    <string name="device_maintainer">Maintainer</string>
    <string name="version">Latest version</string>
    <string name="last_update">Last updated</string>
    <string name="install_download">Download &amp; Install</string>
    <string name="install_local">Install from storage</string>
    <string name="backup_recovery">Backup current recovery</string>
    <string name="unknown">Unknown</string>
    <string name="title_finished">Action finished</string>
    <string name="backup_complete">Recovery partition successfully backed up to the selected location</string>
    <string name="question_confirm_flash">Are you sure you want to flash the following file as recovery?</string>
    <string name="string_okay">OK</string>
    <string name="string_yes">Yes</string>
    <string name="string_cancel">Cancel</string>
    <string name="build">Build</string>
    <string name="network_warning">No Internet connection. Please turn on data or connect to Wi-Fi</string>
    <string name="flash_completed_local">Selected image has been successfully flashed as recovery</string>
    <string name="su_error">Root access denied. Please allow root permissions to use this app</string>
    <string name="fs_error">Filesystem access denied. Please allow necessary permissions to use this app</string>
    <string name="install_download_cancel">Installation of ZIP file for 2GB variant was cancelled. However, the downloaded file is placed in "Downloads". You can flash it from your existing custom recovery</string>
    <string name="error">Error</string>
    <string name="info">Information</string>
    <string name="reboot">Reboot</string>
    <string name="reboot_recovery">Reboot to recovery</string>
    <string name="reboot_bootloader">Reboot to bootloader</string>
    <string name="confirm_reboot_title">Confirm reboot</string>
    <string name="confirm_reboot_msg">Do you really want to reboot?</string>
    <string name="confirm_reboot_recovery">Do you really want to reboot into recovery?</string>
    <string name="confirm_reboot_bootloader">Do you really want to reboot into bootloader?</string>

    <!-- Downloader -->
    <string name="download_eta_sec">%1$ds left</string>
    <string name="download_eta_min">%1$dm %2$ds left</string>
    <string name="download_eta_hrs">%1$dh %2$dm %3$ds left</string>
    <string name="download_speed_bytes">%1$d B/s</string>
    <string name="download_speed_kb">%1$s KB/s</string>
    <string name="download_speed_mb">%1$s MB/s</string>

    <string name="downloader_title">Downloading...</string>
    <string name="pause">PAUSE</string>
    <string name="resume">RESUME</string>

    <string name="download_complete_title">Download Completed</string>
    <string name="download_complete_msg">RedWolf has been successfully downloaded.</string>
    <string name="download_interrupted_title">Download Interrupted</string>
    <string name="download_interrupted_msg">Download has been interrupted due to unknown error.</string>
    <string name="download_cancelled_title">Download Cancelled</string>
    <string name="download_cancelled_msg">Download has been cancelled by the user.</string>

    <!-- Notification -->
    <string name="notification_paused">Paused</string>
    <string name="notification_cancelled">Download Cancelled</string>
    <string name="notification_completed">Download Completed</string>
    <string name="notification_error">Unknown Error</string>

    <!-- Fab Menu -->
    <string name="fab_main">RedWolf Actions</string>
    <string name="fab_flash">Download &amp; Install</string>
    <string name="fab_flash_local">Install from storage</string>
    <string name="fab_backup">Backup current recovery</string>

    <!-- Check Update -->
    <string name="check_update">Check for updates</string>
    <string name="update_available">Update available&#8230;!</string>
    <string name="update_not_available">No update available / Up-to-date</string>
    <string name="update_error">Error on cheking for updates</string>

    <string name="initialising">Initialising&#8230;</string>
    <string name="preparing_executables">Preparing executables&#8230;</string>
    <string name="removing_temp">Removing temp files&#8230;</string>
    <string name="dumping_recoveryimage">Dumping recovery image&#8230;</string>
    <string name="unpacking_recoveryimage">Unpacking recovery image&#8230;</string>
    <string name="extracting_ramdisk">Extracting ramdisk&#8230;</string>
    <string name="reading_prop">Reading recovery properties&#8230;</string>
    <string name="failed">Failed</string>
</resources>
