<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.redwolfrecovery.redwolf.MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_device" />

                    <TextView
                        android:id="@+id/txt_device_name"
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_name"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_device_name_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_memory" />

                    <TextView
                        android:id="@+id/txt_device_size"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_ram"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_device_size_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_support" />

                    <TextView
                        android:id="@+id/txt_support_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_support"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_support_status_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_maintainer" />

                    <TextView
                        android:id="@+id/txt_maintainer"
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_maintainer"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_maintainer_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_wolf" />

                    <TextView
                        android:id="@+id/txt_version"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_version_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_build" />

                    <TextView
                        android:id="@+id/txt_build"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/build"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_build_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:id="@+id/imageView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_lastupdated" />

                    <TextView
                        android:id="@+id/txt_updated"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_update"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_updated_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </TableRow>

            </TableLayout>
        </LinearLayout>

    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="189dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="DownloadAndInstall"
            android:text="@string/install_download"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.398"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="128dp" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="InstallFromLocal_OnClick"
            android:text="@string/install_local"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.048" />

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:onClick="BackupRecovery_OnClick"
            android:text="@string/backup_recovery"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
