<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="io.github.redwolfrecovery.redwolf.MainActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="5dp"
                android:stretchColumns="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_device" />

                    <TextView
                        android:layout_width="137dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_name"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_device_name_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_memory" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_ram"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_device_size_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_support" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/device_support"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_support_status_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_maintainer" />

                    <TextView
                        android:layout_width="95dp"
                        android:layout_height="wrap_content"
                        android:text="@string/device_maintainer"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_maintainer_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_wolf" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_version_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_build" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/build"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_build_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingTop="5dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingEnd="5dp"
                        app:srcCompat="@drawable/ic_lastupdated" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/last_update"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                    <TextView
                        android:id="@+id/txt_updated_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="right"
                        android:textAppearance="@android:style/TextAppearance.Material.Medium" />

                </TableRow>

            </TableLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/layout_UpdateStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="5dp"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgUpdateStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:adjustViewBounds="false"
                        android:cropToPadding="false"
                        android:paddingRight="5dp"
                        android:paddingStart="5dp"
                        android:scaleType="matrix"
                        fab:srcCompat="@drawable/ic_update_notavailable" />

                    <TextView
                        android:id="@+id/txtUpdateStatus"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0"
                        android:gravity="center_vertical"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:text="TextView" />

                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/btn_CheckUpdates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:text="@string/check_update" />

        </LinearLayout>

    </android.support.v7.widget.CardView>


    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/rw_fab_menu"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:elevation="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        fab:menu_animationDelayPerItem="55"
        fab:menu_backgroundColor="@android:color/transparent"
        fab:menu_buttonSpacing="0dp"
        fab:menu_colorNormal="@color/colorFabLight"
        fab:menu_colorPressed="@color/colorFabDark"
        fab:menu_colorRipple="#99d4d4d4"
        fab:menu_fab_size="normal"
        fab:menu_icon="@drawable/ic_arrow_up"
        fab:menu_labels_colorNormal="#333"
        fab:menu_labels_colorPressed="#444"
        fab:menu_labels_colorRipple="#66efecec"
        fab:menu_labels_cornerRadius="3dp"
        fab:menu_labels_ellipsize="none"
        fab:menu_labels_hideAnimation="@anim/fab_slide_out_to_right"
        fab:menu_labels_margin="0dp"
        fab:menu_labels_maxLines="-1"
        fab:menu_labels_padding="8dp"
        fab:menu_labels_position="left"
        fab:menu_labels_showAnimation="@anim/fab_slide_in_from_right"
        fab:menu_labels_showShadow="true"
        fab:menu_labels_singleLine="false"
        fab:menu_labels_textColor="#f2f1f1"
        fab:menu_labels_textSize="15sp"
        fab:menu_openDirection="up"
        fab:menu_shadowColor="#66aff198"
        fab:menu_shadowRadius="4dp"
        fab:menu_shadowXOffset="1dp"
        fab:menu_shadowYOffset="4dp"
        fab:menu_showShadow="true">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_backup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_backup"
            fab:fab_label="@string/fab_backup"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_install_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_storage"
            fab:fab_label="@string/fab_flash_local"
            fab:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/fab_install_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_flash"
            fab:fab_label="@string/fab_flash"
            fab:fab_size="mini" />
    </com.github.clans.fab.FloatingActionMenu>

</android.support.constraint.ConstraintLayout>
